@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods


class Agent {
    citizen card
    tax number
    address
    phone number
    agency
}

class City {

}

class District{
}

class State{
}


class Advertisement {
    property description
}



class House {
     number of bedrooms
     number of bathroom
     number of parking spaces
     available equipment
     existence of a basement
     inhabitable loft
     sun exposure
}

class Apartment {
     number of bedrooms
     number of bathroom
     number of parking spaces
     available equipment
}
class Land {
     description
}

class Commission {
    commission value
}

class Property {
     type of property
     area
     location
     distance from the city centre
     price
     photographs
}




Advertisement "*" -- "*" Property: contains >
Agent "1" -- "*" Advertisement: publish >
House "1" --"1" Property: is >
Apartment"1" -- "1" Property: is >
Land"1" - "1" Property: is >
Advertisement"1" - "1" Commission: it has >
Property"1" - "1" City: it has >
City"1" - "1" District: it has >
District"1" - "1" State: it has >




@enduml